plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.ChargEV'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	//aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	//db
	runtimeOnly 'org.postgresql:postgresql'
	//lombok
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'
	//querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	//oauth2 client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	//feign client
	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.2")
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'io.github.openfeign:feign-okhttp:11.7'
	//google api client
	implementation 'com.google.api-client:google-api-client:2.4.0'
	//gson
	implementation 'com.google.code.gson:gson:2.9.0'
	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	//thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}
